# discord-logger

./: .gitignore  LICENSE  README.md  dummy.py  pyproject.toml
src/discord_logger/: __init__.py  logger.py
tests/: conftest.py  test_discord_logger.py  test_format_embed.py  test_format_message.py  test_get_logger.py  test_manager.py  utils.py
