[project]
name = "discord_logger"
version = "0.1.0"
description = ""
authors = [
    {name = "Vincent FRANCAIS", email = "vincent.francais@gmail.com"},
]
dependencies = [
    "discord-webhook>=1.3.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tools.commitizem]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "src/discord_logger/__version__.py",
    "pyproject.toml:version"
]
[tool.pdm.dev-dependencies]
dev = [
    "commitizen>=3.12.0",
    "pygments>=2.16.1",
]
